Fixed z-index issue

--- a/src/styles/components/topbar/topbar.css
+++ b/src/styles/components/topbar/topbar.css
@@ -123,6 +123,8 @@
   width:100%;
   background-color:var(--ni-blue);
   top:0;
+  z-index: 3;
+  backface-visibility: hidden;
 }
 .navbar{
   height:55px;
